@@ -167,7 +167,7 @@ public class TsvAssayProvider extends AbstractTsvAssayProvider
         List<AssayDataCollector> result = super.getDataCollectors(uploadedFiles, context);
         if (PipelineDataCollector.getFileQueue(context).isEmpty())
         {
-            result.add(0, new TextAreaDataCollector<>());
+            result.addFirst(new TextAreaDataCollector<>());
         }
         return result;
     }
@@ -285,7 +285,7 @@ public class TsvAssayProvider extends AbstractTsvAssayProvider
         specimenID.setImportAliasSet(specimenImportAliases);
 
         DomainProperty participantID = addProperty(dataDomain, PARTICIPANTID_PROPERTY_NAME, PARTICIPANTID_PROPERTY_CAPTION, PropertyType.STRING, "Used with either " + VISITID_PROPERTY_NAME + " or " + DATE_PROPERTY_NAME + " to identify subject and timepoint for assay.");
-        participantID.setConceptURI(org.labkey.api.gwt.client.ui.PropertyType.PARTICIPANT_CONCEPT_URI);
+        participantID.setConceptURI(PropertyType.PARTICIPANT_CONCEPT_URI);
         participantID.setImportAliasSet(participantImportAliases);
 
         DomainProperty visitID = addProperty(dataDomain, VISITID_PROPERTY_NAME,  VISITID_PROPERTY_CAPTION, PropertyType.DOUBLE, "Used with " + PARTICIPANTID_PROPERTY_NAME + " to identify subject and timepoint for assay.");
@@ -887,7 +887,7 @@ public class TsvAssayProvider extends AbstractTsvAssayProvider
             TsvAssayProvider provider = new TsvAssayProvider();
             List<AssayDataCollector> dataCollectors = provider.getDataCollectors(null, _uploadContext);
             assertEquals(1, dataCollectors.size());
-            assertEquals(PipelineDataCollector.class, dataCollectors.get(0).getClass());
+            assertEquals(PipelineDataCollector.class, dataCollectors.getFirst().getClass());
         }
 
         @Test
