@@ -145,7 +145,7 @@ public class DatasetQueryView extends StudyQueryView
         if (!_dataset.getName().equalsIgnoreCase(settings.getQueryName()))
         {
             // settings has label instead of name; warn that label is being used to lookup
-            _systemLog.warn("Dataset in schema'" + schema.getName() + "' was referenced by label (" + settings.getQueryName() + "), not name (" + _dataset.getName() + ").");
+            _systemLog.warn("Dataset in schema'{}' was referenced by label ({}), not name ({}).", schema.getName(), settings.getQueryName(), _dataset.getName());
         }
 
         _showSourceLinks = settings.isShowSourceLinks();
@@ -851,7 +851,7 @@ public class DatasetQueryView extends StudyQueryView
                     SQLFragment sql = new SQLFragment("SELECT DS.lsid")
                             .append(" FROM ").append(rootTable,"DS")
                             .append(" JOIN ").append(dataTable, "AT")
-                            .append(" ON DS.").append(_dataset.getKeyPropertyName()).append(" = ").append("AT.").append(dataTable.getPkColumnNames().get(0))
+                            .append(" ON DS.").append(_dataset.getKeyPropertyName()).append(" = ").append("AT.").append(dataTable.getPkColumnNames().getFirst())
                             .append(" WHERE DS.").append(studyVisit).append(" <> AT.").append(_assayVisit).append(" OR ")
                             .append(" DS.ParticipantId <> ").append(rootTable.getSqlDialect().getVarcharCast(new SQLFragment("AT." + _assaySubject.getName())));
 
